# fsig

./: CMakeLists.txt  README.md  conanfile.txt
conan_profiles/: gcc6.2_debug_x64.txt  gcc6.2_release_x64.txt  mingw7.3_debug_x64.txt  mingw7.3_release_x64.txt  msvc15_debug_x64.txt  msvc15_release_x64.txt
include/: command_line.hpp  file_reader.hpp  file_writer.hpp  io_interfaces.hpp  worker.hpp
src/: command_line.cpp  file_reader.cpp  file_writer.cpp  main.cpp  worker.cpp
test/: helpers.cpp  helpers.hpp  memory_reader.cpp  memory_reader.hpp  memory_writer.cpp  memory_writer.hpp  worker_test.cpp
